# tauri-plugin-presentation-api

./: Cargo.toml  README.md  package.json
.github/workflows/: audit.yml  checks.yml  clippy.yml  format.yml  test.yml
examples/tauri-app/: package.json  run.bat  vite.config.ts
examples/tauri-app/src/: App.svelte  main.ts
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
src/: lib.rs
webview-dist/: bundle.css  index.d.ts  index.js
webview-src/: index.ts  modal.css  modal.js  rollup.config.js
