[package]
name = "tauri-plugin-presentation-api"
version = "1.0.0"
authors = [ "Miniontoby" ]
description = "Tauri Plugin to make Web Presentation API work"
edition = "2021"
rust-version = "1.59"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.2.4" }
serde = "1.0"
thiserror = "1.0"
